force-app/main/default/objects/innohub__Innovation_Idea__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
	<description>Idea Category and it is controlling picklist field</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sequencer: Hardware/Control SW/Reagents</fullName>
            </value>
            <value>
                <fullName>Software: Non-instrument Control SW</fullName>
            </value>
            <value>
                <fullName>Library Prep</fullName>
            </value>
            <value>
                <fullName>Arrays: Scanner/Reagents/Control SW</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
				<isActive>false</isActive>
                <label>Community</label>
            </value>
			<value>
                <fullName>Idea Exchange</fullName>
				<isActive>true</isActive>
                <label>Idea Exchange</label>
            </value>
            <value>
                <fullName>Proactive</fullName>
            </value>
            <value>
                <fullName>Topics for Support Videos</fullName>
            </value>
            <value>
                <fullName>DCP Enhancements – AMR</fullName>
            </value>
            <value>
                <fullName>AMR Service &amp; Support Hub</fullName>
            </value>
            <value>
                <fullName>Internal Field Service Document Revision Request</fullName>
            </value>
            <value>
                <fullName>TS Process Excellence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>