force-app/main/default/objects/innohub__Innovation_Idea__c/fields/innohub__Category__c.field-meta.xml
<CustomField>
    <fullName>innohub__Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sequencer: Hardware/Control SW/Reagents</fullName>
            </value>
            <value>
                <fullName>Software: Non-instrument Control SW</fullName>
            </value>
            <value>
                <fullName>Library Prep</fullName>
            </value>
            <value>
                <fullName>Arrays: Scanner/Reagents/Control SW</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Proactive</fullName>
            </value>
            <value>
                <fullName>Topics for Support Videos</fullName>
            </value>
            <value>
                <fullName>DCP Enhancements – AMR</fullName>
            </value>
			<value>
                <fullName>AMR Service &amp; Support Hub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>