force-app/main/default/objects/innohub__Innovation_Idea__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
	<description>Idea Sub Category and it is dependent multi select picklist field</description>
    <label>Sub Category</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>iSeq 100</fullName>
            </value>
            <value>
                <fullName>MiniSeq</fullName>
            </value>
            <value>
                <fullName>MiSeq</fullName>
            </value>
            <value>
                <fullName>MiSeqDx</fullName>
            </value>
            <value>
                <fullName>NextSeq 500/550</fullName>
            </value>
            <value>
                <fullName>NextSeq 550Dx</fullName>
            </value>
            <value>
                <fullName>NextSeq 1000/2000</fullName>
            </value>
            <value>
                <fullName>HiSeq 1000/1500/2000/2500/3000/4000/X</fullName>
            </value>
            <value>
                <fullName>NovaSeq 6000</fullName>
            </value>
            <value>
                <fullName>NovaSeq 6000Dx</fullName>
            </value>
            <value>
                <fullName>NovaSeq X</fullName>
            </value>
            <value>
                <fullName>BaseSpace Sequence Hub (BSSH)</fullName>
            </value>
            <value>
                <fullName>BaseSpace CLI</fullName>
            </value>
            <value>
                <fullName>DRAGEN Bio-IT Platform</fullName>
            </value>
            <value>
                <fullName>BaseSpace Apps</fullName>
            </value>
            <value>
                <fullName>Illumina Connected Analytics (ICA)</fullName>
            </value>
            <value>
                <fullName>Local Run Manager (LRM)</fullName>
            </value>
            <value>
                <fullName>TruSight Software Suite (TSS)</fullName>
            </value>
            <value>
                <fullName>Internal use only tools/resources</fullName>
            </value>
            <value>
                <fullName>Emedgene (Illumina Connected Insights)</fullName>
            </value>
            <value>
                <fullName>DNA prep kits</fullName>
            </value>
            <value>
                <fullName>RNA prep kits</fullName>
            </value>
            <value>
                <fullName>AmpliSeq</fullName>
            </value>
            <value>
                <fullName>Enrichment</fullName>
            </value>
            <value>
                <fullName>Clinical, NIPT, and TSO500</fullName>
            </value>
            <value>
                <fullName>Infinium assay</fullName>
            </value>
            <value>
                <fullName>Microarray instrumentation/equipment</fullName>
            </value>
            <value>
                <fullName>Microarray analysis</fullName>
            </value>
            <value>
                <fullName>Arrays</fullName>
            </value>
            <value>
                <fullName>Library Prep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>