force-app/main/default/objects/innohub__Innovation_Idea__c/fields/Vote_Count__c.field-meta.xml
<CustomField>
    <fullName>Vote_Count__c</fullName>
    <description>Multiply total number of votes by 10 to get points</description>
    <formula>10* innohub__Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>