force-app/main/default/objects/innohub__Innovation_Idea__c/recordTypes/innohub__Challenge_Submission.recordType-meta.xml
<RecordType>
    <fullName>innohub__Challenge_Submission</fullName>
    <active>false</active>
    <description>Record Type reserved for Ideas created as part of a challenge</description>
    <label>Challenge Submission</label>
</RecordType>