force-app/main/default/objects/innohub__Innovation_Idea__c/recordTypes/innohub__Evolution_Request.recordType-meta.xml
<RecordType>
    <fullName>innohub__Evolution_Request</fullName>
    <active>false</active>
    <description>An enhancement request to a feature or functionality that already exists in our CRM today</description>
    <label>Evolution Request</label>
</RecordType>