force-app/main/default/objects/innohub__Innovation_Idea__c/recordTypes/innohub__Idea.recordType-meta.xml
<RecordType>
    <fullName>innohub__Idea</fullName>
    <active>true</active>
    <description>A brand new innovative feature, functionality, or process which could leverage the power of our CRM to improve the customer or employee experience</description>
    <label>Idea</label>
</RecordType>