force-app/main/default/objects/innohub__Innovation_Idea__c/validationRules/Allow_only_owner_to_edit_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Allow_only_owner_to_edit_record</fullName>
    <active>true</active>
    <description>Allow only owner to edit record</description>
    <errorConditionFormula>AND 
(
NOT(ISNEW()),
OR(
ISCHANGED(Name),
ISCHANGED(innohub__Category__c),
ISCHANGED(innohub__Approval_Status__c),
ISCHANGED(innohub__Description__c)
),
($User.Id &lt;&gt; CreatedById),
NOT($Permission.Customer_Community_Admin),
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c)
)</errorConditionFormula>
    <errorMessage>User can only edit Ideas that they have created. User can not edit someone else&apos;s Ideas.</errorMessage>
</ValidationRule>